# 2-cho-community-be

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.k8s  GEMINI.md  README.md  main.py  pyproject.toml  pytest.ini  report.md  ws_app.py
.github/workflows/: deploy-backend.yml  deploy-k8s.yml  python-app.yml  rollback-backend.yml
assets/: terms.html
controllers/: __init__.py  activity_controller.py  admin_controller.py  auth_controller.py  block_controller.py  bookmark_controller.py  category_controller.py  comment_controller.py  comment_like_controller.py  dm_controller.py  follow_controller.py  like_controller.py  notification_controller.py  package_controller.py  poll_controller.py  post_controller.py  report_controller.py  suspension_controller.py  tag_controller.py  terms_controller.py  user_controller.py  wiki_controller.py
core/: config.py  logging_config.py
core/database/: Dockerfile  __init__.py  connection.py  migration_for_you_feed.sql  migration_polls.sql  migration_post_draft.sql  migration_social_login.sql  migration_terms_agreed.sql  schema.sql  seed_data.py  seed_data_large.py
core/dependencies/: __init__.py  auth.py  request_context.py
core/middleware/: __init__.py  body_limit.py  exception_handler.py  rate_limiter.py  rate_limiter_memory.py  rate_limiter_redis.py  request_id.py  security_headers.py
core/utils/: email.py  error_codes.py  exceptions.py  formatters.py  jwt_utils.py  pagination.py  redis_client.py  storage.py  storage_s3.py  upload.py  websocket_pusher.py
database/: .dockerignore  Dockerfile  connection.py  migration_001_add_indexes.sql  migration_002_add_indexes.sql  migration_003_add_performance_indexes.sql  migration_999_final_optimized_indexes.sql  migration_dm.sql  migration_follow.sql  migration_mention.sql  migration_notification_setting.sql  migration_social_login.sql  migration_suspension.sql  migration_tags.sql  schema.sql  seed_data.py  seed_data_large.py
dependencies/: __init__.py  auth.py  request_context.py
docs/: architecture.md  testing.md
docs/plans/: 2026-03-02-phase2-implementation-plan.md  2026-03-02-phase2-user-activity-notifications-design.md  2026-03-04-account-suspension-design.md  2026-03-04-account-suspension.md
load_tests/: accounts.py  config.py  locustfile.py  seed_accounts.py
middleware/: __init__.py  csrf_protection.py  exception_handler.py  logging.py  rate_limiter.py  rate_limiter_base.py  rate_limiter_dynamodb.py  rate_limiter_memory.py  rate_limiter_redis.py  timing.py
migrations/: env.py  script.py.mako
migrations/versions/: 0001_baseline.py  0002_reputation.py  0003_tag_descriptions.py  0004_wiki_page_revision.py
models/: __init__.py  activity_models.py  admin_models.py  affinity_models.py  block_models.py  bookmark_models.py  category_models.py  comment_like_models.py  comment_models.py  dm_models.py  draft_models.py  follow_models.py  like_models.py  notification_models.py  notification_setting_models.py  package_models.py  package_review_models.py  poll_models.py  post_models.py  report_models.py  session_models.py  social_account_models.py  suspension_models.py  tag_models.py  token_models.py  user_model.py  user_models.py  verification_models.py  wiki_models.py
modules/: __init__.py
modules/admin/: __init__.py  admin_controller.py  admin_models.py  report_controller.py  report_models.py  report_service.py  router.py  (+3 more)
routers/: __init__.py  auth_router.py  category_router.py  dm_router.py  draft_router.py  notification_router.py  package_router.py  post_router.py  report_router.py  social_auth_router.py  tag_router.py  terms_router.py  test_router.py  user_router.py  websocket_router.py  wiki_router.py
schemas/: __init__.py  _image_validators.py  auth_schemas.py  comment_schemas.py  common.py  package_schemas.py  poll_schemas.py  post_schemas.py  recovery_schemas.py  report_schemas.py  social_auth_schemas.py  suspension_schemas.py  user_schemas.py  wiki_schemas.py
scripts/: backfill_reputation.py  lint.sh
services/: affinity_scorer.py  auth_service.py  block_service.py  bookmark_service.py  comment_like_service.py  comment_service.py  dm_service.py  feed_service.py  follow_service.py  like_service.py  package_service.py  poll_service.py  post_service.py  report_service.py  suspension_service.py  user_service.py  wiki_service.py
tests/: conftest.py  test_admin_dashboard.py  test_admin_reports.py  test_auth_controller.py  test_block.py  test_bookmark.py  test_comment_like.py  test_comment_reply.py  test_coverage_gaps.py  test_dm.py  test_email_verification.py  test_email_verification_guard.py  test_follow.py  test_following_feed.py  test_internal_auth.py  test_mention.py  test_my_activity.py  test_notifications.py  test_polls.py  test_post_search.py  test_qa_full.py  test_rate_limiter.py  test_rate_limiter_dynamodb.py  test_rate_limiter_redis.py  test_read_indicator.py  test_redis_client.py  test_related_posts.py  test_s3_utils.py  test_storage.py  test_suspension.py  test_tags.py  test_transaction_race_conditions.py  test_upload.py  test_user_profile.py  test_user_search.py  test_websocket_handler.py  test_websocket_pusher.py  test_wiki.py  test_ws_app.py
utils/: __init__.py  email.py  error_codes.py  exceptions.py  file_utils.py  formatters.py  image_resize.py  jwt_utils.py  mention.py  password.py  redis_client.py  s3_utils.py  storage.py  storage_s3.py  temp_password.py  upload.py  websocket_pusher.py
ws_handler/: auth.py  dynamo.py  handler.py  requirements.txt
(+167 files in other folders)
