[project]
name = "2-cho-community-be"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.3.0",
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anyio>=4.12.1",
    "click>=8.3.1",
    "colorama>=0.4.6",
    "dnspython>=2.8.0",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "h11>=0.16.0",
    "httptools>=0.7.1",
    "idna>=3.11",
    "itsdangerous>=2.2.0",
    "pydantic>=2.12.5",
    "pydantic_core>=2.41.5",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "PyYAML>=6.0.3",
    "starlette>=0.50.0",
    "typing-inspection>=0.4.2",
    "typing_extensions>=4.15.0",
    "uvicorn>=0.40.0",
    "watchfiles>=1.1.1",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "ruff", "mypy"]

[tool.setuptools]
packages = ["routers", "controllers", "schemas", "models", "dependencies", "middleware"]
py-modules = ["main"]