[project]
name = "2-cho-community-be"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.3.0",
    "bcrypt>=4.0.0",
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anyio>=4.12.1",
    "click>=8.3.1",
    "colorama>=0.4.6",
    "dnspython>=2.8.0",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "faker>=21.1.1",
    "h11>=0.16.0",
    "httptools>=0.7.1",
    "idna>=3.11",
    "pyjwt>=2.9.0",
    "pydantic>=2.12.5",
    "pydantic_core>=2.41.5",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "PyYAML>=6.0.3",
    "starlette>=0.50.0",
    "typing-inspection>=0.4.2",
    "typing_extensions>=4.15.0",
    "uvicorn>=0.40.0",
    "watchfiles>=1.1.1",
    "websockets>=15.0.1",
    "cryptography>=46.0.5",
    "Pillow>=11.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "httpx", "ruff", "mypy"]
load-test = ["locust>=2.28.0"]
k8s = [
    "redis>=5.0",
    "prometheus-fastapi-instrumentator>=7.0",
    "boto3>=1.35.0",
]

[tool.setuptools]
find = {namespaces = true}
packages = ["core", "core.database", "core.middleware", "core.dependencies", "core.utils", "modules", "modules.auth", "modules.auth.social", "modules.user", "modules.post", "modules.dm", "modules.notification", "modules.admin", "modules.content", "modules.wiki", "modules.package", "routers", "schemas"]
py-modules = ["main"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# pydantic-settings loads from .env at runtime
plugins = ["pydantic.mypy"]
# Exclude build artifacts to avoid duplicate module errors
exclude = ["build/"]

# pymysql lacks type stubs
[[tool.mypy.overrides]]
module = "pymysql.*"
ignore_missing_imports = true
ignore_errors = true

# Allow untyped definitions in tests
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# load_tests: locust/requests 등 타입 스텁 미제공 라이브러리 사용
[[tool.mypy.overrides]]
module = "load_tests.*"
ignore_missing_imports = true
ignore_errors = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "S",     # flake8-bandit (security)
    "T20",   # flake8-print
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]
ignore = [
    "S101",  # assert 사용 허용 (테스트)
    "S105",  # 하드코딩 비밀번호 감지 — 설정 키 이름에서 오탐
    "S106",  # 함수 인자 비밀번호 감지 — 테스트 fixture에서 오탐
    "B008",  # Depends() 호출 허용 (FastAPI 패턴)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "T20", "N802"]
"load_tests/**" = ["S", "T20", "RUF002"]
"core/database/seed_data.py" = ["S311", "T201", "E501", "SIM108"]
"core/database/seed_data_large.py" = ["S311", "T201", "E501", "S608", "N806", "SIM108", "SIM102", "S310", "RUF002"]
"modules/**/*models*.py" = ["S608"]
"modules/user/models.py" = ["S608", "N802"]
"schemas/**" = ["N815"]
"modules/**/*schemas*.py" = ["N815"]
"modules/**/*responses*.py" = ["N815"]
"modules/post/affinity_scorer.py" = ["RUF002", "RUF003"]
"core/middleware/rate_limiter_memory.py" = ["S104"]
"ws_app.py" = ["S110"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
